--- a/advanceBook/build.gradle
+++ b/advanceBook/build.gradle
@@ -1,5 +1,8 @@
-plugins {
-    id 'com.android.library'
+if (isSingleModuleDebug.toBoolean()){
+    //表示当前为模块单独调试状态
+    apply plugin: 'com.android.application'
+}else{
+    apply plugin: 'com.android.library'
 }
 
 android {
@@ -28,6 +31,9 @@ android {
 }
 
 dependencies {
+    //集成base模块和common模块
+    implementation project(':lib-base')
+    implementation project(':lib-common')
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
