--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    //全局可使用version.gradle中的插件
+    apply from: "version.gradle"
+
     repositories {
         google()
         mavenCentral()
