--- a/module-inCanteen/build.gradle
+++ b/module-inCanteen/build.gradle
@@ -1,6 +1,10 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
+if (isSingleModuleDebug.toBoolean()){
+    //表示当前为模块单独调试状态
+    apply plugin: 'com.android.application'
+    apply plugin: 'kotlin-android'
+}else{
+    apply plugin: 'com.android.library'
+    apply plugin: 'kotlin-android'
 }
 
 android {
@@ -32,6 +36,9 @@ android {
 }
 
 dependencies {
+    //集成base模块和common模块
+    implementation project(':lib-base')
+    implementation project(':lib-common')
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
