--- a/settings.gradle
+++ b/settings.gradle
@@ -11,5 +11,5 @@ include ':app'
 include ':lib-base'
 include ':lib-common'
 include ':module-inCanteen'
-include ':advanceBook'
-include ':takeout'
+include ':module-advanceBook'
+include ':module-takeout'
