--- a/module-advanceBook/src/main/AndroidManifest.xml
+++ b/module-advanceBook/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swu.advancebook">
 
+    <application>
+        <activity
+            android:name=".BookActivity"
+            android:exported="false" />
+    </application>
+
 </manifest>
