--- a/module-inCanteen/build.gradle
+++ b/module-inCanteen/build.gradle
@@ -1,49 +1,6 @@
-if (isSingleModuleDebug.toBoolean()){
-    //表示当前为模块单独调试状态
-    apply plugin: 'com.android.application'
-    apply plugin: 'kotlin-android'
-}else{
-    apply plugin: 'com.android.library'
-    apply plugin: 'kotlin-android'
-}
-
-android {
-    compileSdk 31
-
-    defaultConfig {
-        minSdk 21
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
-
+apply from: '../config.gradle'
 dependencies {
-    //集成base模块和common模块
-    implementation project(':lib-base')
-    implementation project(':lib-common')
-
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
+apply plugin: 'kotlin-android'
