--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,5 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-# ÅÐ¶ÏÄ£¿éÊÇ·ñÎªµ¥¶Àµ÷ÊÔ×´Ì¬£¬Ä¬ÈÏÎªtrue
+# ï¿½Ð¶ï¿½Ä£ï¿½ï¿½ï¿½Ç·ï¿½Îªï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½×´Ì¬ï¿½ï¿½Ä¬ï¿½ï¿½Îªtrue
 isSingleModuleDebug = true
