--- a/module-inCanteen/src/main/module/AndroidManifest.xml
+++ b/module-inCanteen/src/main/module/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swu.module_incanteen">
     <application
-        android:theme="@style/Theme.AppTheme"
+        android:theme="@style/Theme.SmartCanteen"
         android:allowBackup="true"
         android:supportsRtl="true">
         <activity
