--- a/third_party_config.gradle
+++ b/third_party_config.gradle
@@ -16,6 +16,8 @@ ext {
             RXANDROID :'io.reactivex.rxjava2:rxandroid:2.1.1',
             // 衔接 Retrofit & RxJava
             // 此处一定要注意使用RxJava2的版本
-            RETROFIT2_RXJAVA2_ADAPTER :'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+            RETROFIT2_RXJAVA2_ADAPTER :'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0',
+            // 导入MMKV
+            MMKV :  'com.tencent:mmkv:1.0.10'
     ]
 }
