添加统一的一套Base

--- a/config.gradle
+++ b/config.gradle
@@ -36,6 +36,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        viewBinding.enabled = true
     }
 
     buildTypes {
