--- a/module-inCanteen/src/main/module/AndroidManifest.xml
+++ b/module-inCanteen/src/main/module/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:supportsRtl="true">
         <activity
-            android:name=".incanteenActivity"
+            android:name=".InCanteenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
