--- a/third_party_config.gradle
+++ b/third_party_config.gradle
@@ -1,21 +1,21 @@
 ext {
     dependenciesID = [
-            CORE_KT         : 'androidx.core:core-ktx:1.3.2',
-            APPCOMPAT       : 'androidx.appcompat:appcompat:1.2.0',
-            MATERIAL        : 'com.google.android.material:material:1.3.0',
-            CONSTRAINTLAYOUT: 'androidx.constraintlayout:constraintlayout:2.1.2',
+            CORE_KT                  : 'androidx.core:core-ktx:1.3.2',
+            APPCOMPAT                : 'androidx.appcompat:appcompat:1.2.0',
+            MATERIAL                 : 'com.google.android.material:material:1.3.0',
+            CONSTRAINTLAYOUT         : 'androidx.constraintlayout:constraintlayout:2.1.2',
             //导入retrofit
-            RETROFIT: 'com.squareup.retrofit2:retrofit:2.0.2',
+            RETROFIT                 : 'com.squareup.retrofit2:retrofit:2.0.2',
             //导入Gson
-            GSON :'com.google.code.gson:gson:2.8.5',
+            GSON                     : 'com.google.code.gson:gson:2.8.5',
             //导入转换类
-            CONVERTER_GSON :'com.squareup.retrofit2:converter-gson:2.4.0',
+            CONVERTER_GSON           : 'com.squareup.retrofit2:converter-gson:2.4.0',
             //导入Rxjava
             // 此处一定要注意使用RxJava2的版本
-            RXJAVA :'io.reactivex.rxjava2:rxjava:2.2.10',
-            RXANDROID :'io.reactivex.rxjava2:rxandroid:2.1.1',
+            RXJAVA                   : 'io.reactivex.rxjava2:rxjava:2.2.10',
+            RXANDROID                : 'io.reactivex.rxjava2:rxandroid:2.1.1',
             // 衔接 Retrofit & RxJava
             // 此处一定要注意使用RxJava2的版本
-            RETROFIT2_RXJAVA2_ADAPTER :'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+            RETROFIT2_RXJAVA2_ADAPTER: 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0',
     ]
 }
