--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 # 判断模块是否为单独调试状态，默认为true
-isSingleModuleDebug = false
+isSingleModuleDebug = true
