--- a/lib-common/src/main/AndroidManifest.xml
+++ b/lib-common/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swu.lib_common">
 
+    <application>
+        <activity
+            android:name="com.common.Navigation.NavigationActivity"
+            android:exported="false" />
+    </application>
+
 </manifest>
