修改base里的bug，新增注释以及ui工具

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,2 +1,5 @@
-//引入config.gradle
 apply from: '../config.gradle'
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+}//引入config.gradle
