--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 buildscript {
     //全局可使用version.gradle中的插件
     apply from: "version.gradle"
+    ext {
+        kotlin_version = '1.4.32'
+    }
     repositories {
         google()
         mavenCentral()
