--- a/lib-base/build.gradle
+++ b/lib-base/build.gradle
@@ -15,6 +15,14 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
         viewBinding.enabled = true
+
+        //ARouter配置
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+
+        }
     }
 
     buildTypes {
@@ -39,6 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Room
-    implementation 'android.arch.persistence.room:runtime:1.0.0'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+    api 'android.arch.persistence.room:runtime:1.0.0'
+    //ARouter
+    api'com.alibaba:arouter-api:1.5.0'
 }
