--- a/module-advanceBook/src/main/module/AndroidManifest.xml
+++ b/module-advanceBook/src/main/module/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swu.advancebook">
     <application
+        android:name="com.base.BaseApplication"
         android:theme="@style/Theme.SmartCanteen"
         android:allowBackup="true"
         android:supportsRtl="true">
