--- a/module-takeout/src/main/AndroidManifest.xml
+++ b/module-takeout/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swu.takeout">
 
-    <application>
+    <application android:name="com.base.BaseApplication">
         <activity
             android:name=".TakeOutActivity"
             android:exported="false" />
