--- a/lib-common/src/main/AndroidManifest.xml
+++ b/lib-common/src/main/AndroidManifest.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swu.lib_common">
-
-    <application>
-        <activity
-            android:name="com.common.Navigation.NavigationActivity"
-            android:exported="false" />
-    </application>
+    <uses-permission android:name = "android.permission.INTERNET" />
 
 </manifest>
