分离自定输入框，添加短信验证

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".RegisterActivity">
+
+        </activity>
         <provider
             android:name="cn.bmob.v3.util.BmobContentProvider"
             android:authorities="com.swu.smartcanteen.BmobContentProvider">
