--- a/third_party_config.gradle
+++ b/third_party_config.gradle
@@ -25,7 +25,6 @@ ext {
             FRAGMENT                 : 'androidx.legacy:legacy-support-v4:1.0.0',
             //数据库ROOM配置
             ROOM                     : 'android.arch.persistence.room:runtime:1.0.0',
-            annotationProcessor      : 'android.arch.persistence.room:compiler:1.0.0',
-
+            BMOB               : 'io.github.bmob:android-sdk:3.8.11'
     ]
 }
