--- a/config.gradle
+++ b/config.gradle
@@ -2,7 +2,6 @@ if (isSingleModuleDebug.toBoolean()){
     //表示当前为模块单独调试状态
     apply plugin: 'com.android.application'
     apply plugin: 'kotlin-android'
-//    apply plugin: 'kotlin-kapt'
 }else{
     if(project.name == "app"){
         apply plugin: 'com.android.application'
@@ -40,12 +39,6 @@ android {
         consumerProguardFiles "consumer-rules.pro"
         viewBinding.enabled = true
 
-        //Arouter 配置
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [AROUTER_MODULE_NAME :project.getName() ]
-            }
-        }
     }
 
     buildTypes {
@@ -61,11 +54,7 @@ android {
 }
 
 dependencies {
+
     //集成base模块和common模块
-    //ARouter
-    annotationProcessor'com.alibaba:arouter-compiler:1.2.2'
-    //Room
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
-    implementation project(':lib-base')
-    implementation project(':lib-common')
+    api project(':lib-common')
 }
