--- a/module-inCanteen/build.gradle
+++ b/module-inCanteen/build.gradle
@@ -1,2 +1,12 @@
 apply from: '../config.gradle'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+android.defaultConfig{
+    kapt {
+        arguments {arg("AROUTER_MODULE_NAME", project.getName())}
+    }
+}
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    kapt "com.alibaba:arouter-compiler:1.5.2"
+}
