--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.alibaba:arouter-api:1.5.2"
     kapt "com.alibaba:arouter-compiler:1.5.2"
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'//glide
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.appcompat:appcompat:1.4.0'
 }
