--- a/third_party_config.gradle
+++ b/third_party_config.gradle
@@ -25,6 +25,7 @@ ext {
             FRAGMENT                 : 'androidx.legacy:legacy-support-v4:1.0.0',
             //数据库ROOM配置
             ROOM                     : 'android.arch.persistence.room:runtime:1.0.0',
-            BMOB               : 'io.github.bmob:android-sdk:3.8.11'
+            BMOB               : 'io.github.bmob:android-sdk:3.8.11',
+            GLIDE            : 'com.github.bumptech.glide:glide:4.12.0'
     ]
 }
