add [购物车页面、fragment工具] fix [底部导航栏间隙bug、设置页面不可旋转]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".AdActivity" />
+        <activity android:name=".AdActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".NavigationActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".SplashActivity"
+            android:screenOrientation="portrait"
             android:exported="true"> <!-- exported: 是否支持其它应用调用当前组件 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,8 +36,10 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".RegisterActivity"
+            android:screenOrientation="portrait"/>
 
         <provider
             android:name="cn.bmob.v3.util.BmobContentProvider"
