--- a/module_order/build.gradle
+++ b/module_order/build.gradle
@@ -10,6 +10,7 @@ android.defaultConfig {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.alibaba:arouter-api:1.5.2"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.alibaba:arouter-compiler:1.5.2"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
