扩展FragmentUtil、增加选菜搜索页面

--- a/config.gradle
+++ b/config.gradle
@@ -37,8 +37,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-        viewBinding.enabled = true
 
+    }
+    buildFeatures{
+        viewBinding true
     }
 
     buildTypes {
