--- a/third_party_config.gradle
+++ b/third_party_config.gradle
@@ -25,7 +25,8 @@ ext {
             FRAGMENT                 : 'androidx.legacy:legacy-support-v4:1.0.0',
             //数据库ROOM配置
             ROOM                     : 'android.arch.persistence.room:runtime:1.0.0',
-            BMOB               : 'io.github.bmob:android-sdk:3.8.11',
-            GLIDE            : 'com.github.bumptech.glide:glide:4.12.0'
+            BMOB                     : 'io.github.bmob:android-sdk:3.8.11',
+            GLIDE                    : 'com.github.bumptech.glide:glide:4.12.0',
+            FLOW_LAYOUT              : 'com.hyman:flowlayout-lib:1.1.2'
     ]
 }
