--- a/third_party_config.gradle
+++ b/third_party_config.gradle
@@ -27,6 +27,7 @@ ext {
             ROOM                     : 'android.arch.persistence.room:runtime:1.0.0',
             BMOB                     : 'io.github.bmob:android-sdk:3.8.11',
             GLIDE                    : 'com.github.bumptech.glide:glide:4.12.0',
-            FLOW_LAYOUT              : 'com.hyman:flowlayout-lib:1.1.2'
+            FLOW_LAYOUT              : 'com.hyman:flowlayout-lib:1.1.2',
+            CIRCLE_BUTTON            : 'com.github.markushi:circlebutton:1.1'
     ]
 }
