--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,4 @@
 include ':module_order'
-include ':order'
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -13,3 +12,4 @@ include ':app'
 include ':lib-base'
 include ':lib-common'
 include ':module_order'
+include ':module_person'
