--- a/module_person/src/main/module/AndroidManifest.xml
+++ b/module_person/src/main/module/AndroidManifest.xml
@@ -10,11 +10,13 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name="com.base.BaseApplication"
         android:allowBackup="true"
         android:icon="@drawable/app_logo"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.module_person.DataActivity"
             android:exported="true">
             <intent-filter>
