--- a/module_order/build.gradle
+++ b/module_order/build.gradle
@@ -1,5 +1,6 @@
 apply from: '../config.gradle'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android.defaultConfig {
     kapt {
