--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,4 +15,8 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.12.0'//glide
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.appcompat:appcompat:1.4.0'
+    if (!isSingleModuleDebug.toBoolean()) {
+        implementation project(':module_order')
+        implementation project(':module_person')
+    }
 }
