实现了消息页面的跳转，新增UIActivity

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,10 @@ kotlin.code.style=official
 
 # 判断模块是否为单独调试状态，默认为true
 isSingleModuleDebug = false
+
+# 使用 Gradle Worker API 并行执行 kapt 任务
+#kapt.use.worker.api=false
+## 在编译类路径中关闭对注解处理器的发现
+#kapt.include.compile.classpath=false
+## 启用增量注解处理
+#kapt.incremental.apt=false
