--- a/module_person/src/main/module/AndroidManifest.xml
+++ b/module_person/src/main/module/AndroidManifest.xml
@@ -21,9 +21,11 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.example.module_person.UIActivity"
+            android:exported="true">
         </activity>
     </application>
 
