--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 # 判断模块是否为单独调试状态，默认为true
-isSingleModuleDebug = false
+isSingleModuleDebug = true
 
 # 使用 Gradle Worker API 并行执行 kapt 任务
 #kapt.use.worker.api=false
