--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".AdActivity" />
         <activity
             android:name=".NavigationActivity"
+            android:launchMode="singleTask"
             android:exported="true" >
         </activity>
         <activity
@@ -42,7 +43,8 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name="com.swu.module_order.ChooseFoodActivity"/>
+        <activity android:name="com.swu.module_order.ChooseFoodActivity"
+            android:launchMode="singleTop"/>
         <provider
             android:name="cn.bmob.v3.util.BmobContentProvider"
             android:authorities="com.swu.smartcanteen.BmobContentProvider" />
