--- a/module_order/build.gradle
+++ b/module_order/build.gradle
@@ -2,6 +2,7 @@ apply from: '../config.gradle'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+android.kotlinOptions.jvmTarget = 1.8
 android.defaultConfig {
     kapt {
         arguments {arg("AROUTER_MODULE_NAME", project.getName())}
