--- a/module_order/src/main/AndroidManifest.xml
+++ b/module_order/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swu.module_order">
 
+    <application>
+        <activity android:name=".SearchActivity"
+            android:theme="@style/AppTheme.TranslucentTheme"
+            />
+    </application>
+
 </manifest>
