--- a/third_party_config.gradle
+++ b/third_party_config.gradle
@@ -29,6 +29,9 @@ ext {
             GLIDE                    : 'com.github.bumptech.glide:glide:4.12.0',
             FLOW_LAYOUT              : 'com.hyman:flowlayout-lib:1.1.2',
             CIRCLE_BUTTON            : 'com.github.markushi:circlebutton:1.1',
-            CHECKBOX                 : 'net.igenius:customcheckbox:1.3'
+            CHECKBOX                 : 'net.igenius:customcheckbox:1.3',
+            LOADSIR                  : 'com.kingja.loadsir:loadsir:1.3.6',
+            SMARTREFRESH             : 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0',
+            LOTTIE                   : 'com.airbnb.android:lottie:2.8.0'
     ]
 }
